--- a/zadanie_projektowe_01/.eslintrc.json
+++ b/zadanie_projektowe_01/.eslintrc.json
@@ -3,7 +3,7 @@
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "project": "tsconfig.json",
+      "project": "./tsconfig.json",
       "sourceType": "module"
     },
     "plugins": ["@typescript-eslint"],
@@ -124,4 +124,5 @@
         }
       ]
     }
+
   }
