--- a/zadanie_projektowe_01/tsconfig.json
+++ b/zadanie_projektowe_01/tsconfig.json
@@ -1,10 +1,15 @@
 {
     "compilerOptions": {
+      "target": "ES2016",
+
       "rootDirs": ["src"],
       "outDir": "dist",
       "strict": true,
       "noImplicitAny": true,
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true
-    }
+    },
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules"],
+    "rootDir": "src" 
   }
