--- a/lab_04/zad_02_shopping_list/angular.json
+++ b/lab_04/zad_02_shopping_list/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "zad_02_shopping_cart": {
+    "zad_02_shopping_list": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -15,11 +15,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/zad_02_shopping_cart",
+            "outputPath": "dist/zad_02_shopping_list",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -51,9 +51,12 @@
               "outputHashing": "all"
             },
             "development": {
+              "buildOptimizer": false,
               "optimization": false,
+              "vendorChunk": true,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "namedChunks": true
             }
           },
           "defaultConfiguration": "production"
@@ -62,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "zad_02_shopping_cart:build:production"
+              "browserTarget": "zad_02_shopping_list:build:production"
             },
             "development": {
-              "buildTarget": "zad_02_shopping_cart:build:development"
+              "browserTarget": "zad_02_shopping_list:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "zad_02_shopping_cart:build"
+            "browserTarget": "zad_02_shopping_list:build"
           }
         },
         "test": {
